# Uni-NaVid

./: README.md  api_server.py
ros_deploy/: CMakeLists.txt  README.md  __init__.py  api_server.py  controller.py  node.py  package.xml  setup.py
ros_deploy/config/: api_client.yaml
ros_deploy/ros_deploy/: __init__.py  api_client_node.py  node.py
ros_deploy/scripts/: api_client_node.py  node.py
ros_deploy/srv/: SetInstruction.srv
rosws/src/ros_deploy/: CMakeLists.txt  README.md  setup.py
rosws/src/ros_deploy/config/: api_client.yaml  default.yaml
rosws/src/ros_deploy/scripts/: api_client_node.py
rosws/src/ros_deploy/src/ros_deploy/: api_client_node.py  controller.py  node.py
